Fix landing page bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -385,7 +385,7 @@ a {
     }
 
     .landing {
-        height: 100vh;
+        min-height: 100vh;
     }
 
     .landing__text {
